--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /node_modules
 /public/build
 /public/images
+/public/lady-driver-63940-9715da018167.json
 /public/hot
 /public/storage
 /storage/*.key
