--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "cboden/ratchet": "*",
         "guzzlehttp/guzzle": "^7.2",
         "kreait/laravel-firebase": "*",
         "laravel/framework": "^10.10",
