--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "milon/barcode": "^12.0",
         "predis/predis": "*",
         "spatie/laravel-permission": "^6.9"
     },
