--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /node_modules
 /public/build
 /public/images
+/public/barcodes
 /public/lady-driver-63940-firebase-adminsdk-b90i4-0e286020b0.json
 /public/hot
 /public/storage
