--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": "^8.1",
         "cboden/ratchet": "*",
-        "clue/redis-react": "*",
+        "clue/redis-react": "^2.8",
         "guzzlehttp/guzzle": "^7.2",
         "kreait/laravel-firebase": "*",
         "laravel/framework": "^10.10",
