--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "milon/barcode": "^12.0",
-        "predis/predis": "*",
+        "predis/predis": "^3.2",
         "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
