--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "cboden/ratchet": "*",
         "clue/redis-react": "^2.8",
         "guzzlehttp/guzzle": "^7.2",
+        "kreait/laravel-firebase": "^5.10",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
