--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,13 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "cboden/ratchet": "*",
         "clue/redis-react": "^2.8",
         "guzzlehttp/guzzle": "^7.2",
@@ -32,7 +35,7 @@
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         },
-        "files":[
+        "files": [
             "app/Helpers/helper.php"
         ]
     },
