--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,10 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+MAX_LOGIN_ATTEMPTS=5   # For blocking login after certain attempts
+LOCKOUT_DURATION=120   # Lockout duration in seconds
+
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
