--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,9 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-MAX_LOGIN_ATTEMPTS=5   # For blocking login after certain attempts
-LOCKOUT_DURATION=120   # Lockout duration in seconds
+SECURITY_MAX_ATTEMPTS=5
+SECURITY_LOCK_MINUTES=120
+SECURITY_LOG_CHANNEL=auth
 
 
 DB_CONNECTION=mysql
