--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.8",
         "milon/barcode": "^12.0",
         "predis/predis": "^3.2",
+        "spatie/laravel-medialibrary": "^11.17",
         "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
